DDD News						-*- text -*-
********

DDD 3.2 [in development]
========================

DDD 3.2 brings not much yet.

- Breakpoint commands are also supported for DBX, Perl, and XDB.
- `Breakpoint Properties', `Define Command', and `Debugger Settings'
  have an `Apply' button that applies changes to text fields.
- Structs can now be rotated, showing their values like a horizontal array.
- In TTY mode, you can edit and complete the command line as in GDB.
  (Uses GNU readline library.)
- DDD uses the locale as specified by the environment (such as $LANG).
  This allows input of locale characters in DDD dialogs; error
  messages may also come up in your locale.  If you experience any
  problems, set LANG=C when invoking DDD.
- Ctrl+E moves the cursor to the end of the line.  For a `Run'
  shortcut, use F2/F3 or Shift+Ctrl+E.
- [Perl] DDD supports temporary breakpoints in Perl.
- [GDB] DDD saves the GDB source directory path with the current session.
- [JDB] DDD saves the JDB class path only with the current session.
- [DBX] DEC `ladebug' is supported.

DDD 3.2 also incorporates all changes listed below.

DDD 3.1.7
=========

DDD 3.1.7 fixes a number of minor bugs.

- Auto-raise of menus works much better (and is enabled by default).
- Value tips of strings containing ` = ' are displayed correctly.
- In file names, `//' is no longer normalized to `/'.
- The array syntax `graph display [A..B]' now works for DBX.
- [JDB] Thread names with dashes are handled correctly.
- [HP-UX] Renaming the `~/.ddd/init' file during saving options works.
- [Build] DDD checks whether -fpermissive is required for old X headers.

There are no new features in DDD 3.1.7.  You don't need to upgrade
unless you suffer from one of these problems.

DDD 3.1.6
=========

DDD 3.1.6 brings support for recent tools and components.

- DDD passes all options after `--' to the inferior debugger.
- [Build] DDD supports EGCS 1.1.2 as well as GCC 2.95 and later